crates/rulesteward-fapolicyd/tests/snapshots/W03__trailing-hash-after-tab.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[W03] sev=Warning line=1 col=29 span=28..57 :: inline `# comment` after a rule line — fapolicyd silently drops this rule
