crates/rulesteward-fapolicyd/tests/snapshots/W03__whitespace-then-hash-is-not-rule.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=err
diagnostics=1
[F01] sev=Fatal line=1 col=4 span=3..4 :: found '#' expected ' ', '	', or decision keyword
